--- a/index2.html
+++ b/index2.html
@@ -7,10 +7,10 @@
   <title>Document</title>
    <link rel="stylesheet" type="text/css" href="css/styles.css" />
    
-<h1>Выберите файл для шифрования</h1>
+<h1>Choose file</h1>
 <div class="bothforms">
 <div class="form1">
-<h2>Нажмите для шифрования </br> 1. to encode </h2>
+<h2>press the button </br> 1. to encode </h2>
 <form class="dropzone" method="post" enctype="multipart/form-data" action="/encode">
 	<input type="file" name="filename">
 	<input class="green" type="submit" value="1.encode">
@@ -18,7 +18,7 @@
 </div>
 
 <div class="form2">
-<h2>Нажмите для дешифрования </br> 2. to decode </h2>
+<h2>press the button </br> 2. to decode </h2>
 <form class="dropzone" method="post" enctype="multipart/form-data" action="/decode">
 	<input type="file" name="filename">
 	<input class="green" type="submit" value="2.decode">
